[gd_scene load_steps=9 format=2]

[ext_resource path="res://Graphics/blue_button12.png" type="Texture" id=1]
[ext_resource path="res://Graphics/blue_button11.png" type="Texture" id=2]
[ext_resource path="res://Graphics/blackboard.jpg" type="Texture" id=3]
[ext_resource path="res://Graphics/Feltpen.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://NameEntry.gd" type="Script" id=5]

[sub_resource type="DynamicFont" id=1]
size = 100
outline_color = Color( 0.121569, 0.411765, 0.85098, 1 )
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=2]
size = 100
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=3]
size = 100
font_data = ExtResource( 4 )

[node name="NameEntryBox" type="Node2D"]
script = ExtResource( 5 )

[node name="Background" type="TextureRect" parent="."]
margin_right = 1920.0
margin_bottom = 1080.0
texture = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="Background"]
margin_left = 20.0
margin_top = 20.0
margin_right = 1900.0
margin_bottom = 1060.0
custom_fonts/normal_font = SubResource( 1 )
bbcode_enabled = true
bbcode_text = "[center] Please enter the names of the people who will be playing and then press play.  [/center] "
text = " Please enter the names of the people who will be playing and then press play.   "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextBox" type="LineEdit" parent="Background"]
margin_left = 150.0
margin_top = 820.0
margin_right = 1328.0
margin_bottom = 985.0
custom_fonts/font = SubResource( 2 )
placeholder_text = "Enter a Name"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EnterButton" type="TextureButton" parent="Background"]
margin_left = 1350.0
margin_top = 800.0
margin_right = 1550.0
margin_bottom = 1000.0
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 1 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonLabel" type="RichTextLabel" parent="Background/EnterButton"]
margin_left = 200.0
margin_top = 30.0
margin_right = 700.0
margin_bottom = 230.0
custom_fonts/normal_font = SubResource( 3 )
bbcode_enabled = true
bbcode_text = "Enter"
text = "Enter"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Play" type="TextureButton" parent="Background"]
margin_left = 1350.0
margin_top = 550.0
margin_right = 1550.0
margin_bottom = 750.0
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 1 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonLabel" type="RichTextLabel" parent="Background/Play"]
margin_left = 200.0
margin_top = 30.0
margin_right = 700.0
margin_bottom = 230.0
custom_fonts/normal_font = SubResource( 3 )
bbcode_enabled = true
bbcode_text = "Play"
text = "Play"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Background/EnterButton" to="." method="_on_EnterButton_pressed"]
[connection signal="pressed" from="Background/Play" to="." method="_button_Play"]
